# ComfyUI-RemoveBackground_SET

./: .codespellignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  birefnetNode.py  pyproject.toml  requirements.txt  util.py
.github/: FUNDING.yml
.github/workflows/: publish_comfy_registry_action.yml
birefnet/: dataset.py  image_proc.py
birefnet/models/: birefnet.py
birefnet_old/: dataset.py
birefnet_old/models/: birefnet.py
example_workflows/: 01_Change_Background.json  01_PDFNet_simple.json  01_Simple.json  01_Simple_DiffDIS.json  02_Full_example.json  03_Web_page_examples.json  04_Advanced.json  04_Advanced_subgraphs.json  05_Video.json  05_Video_Advanced.json  06_PDFNet_external_map.json  06_PDFNet_simple.json  07_PDFNet_vs_BiRefNet.json  08_Batch.json  08_PDFNet_external_map.json  09_Compare_Models.json  birefnet_img_and_video.json
info/dicts/: BASDISv2.txt  BEN.txt  BEN2.txt  BEN2_sorted.txt  BRIA_v1_4.txt  BRIA_v1_4_sorted.txt  BiRefNet_General-HR.txt  BiRefNet_HR-general-epoch_230.txt  DiffDIS.txt  DiffDIS_VAE_dump.txt  DiffDIS_config.json  DiffDIS_dump.txt  ISNet_anime-seg.txt  ISNet_anime-seg_sorted.txt  InSPyReNet_Res2Net50.txt  InSPyReNet_Res2Net50_sorted.txt  MVANet.txt  (+11 more)
subgraphs/: Blur_background_(RemBG).json  Border_(RemBG).json  Color_background_(RemBG).json  Highlight_(RemBG).json  RemBG_keep_aspect_+_FMLFE.json  Replace_background_(RemBG).json  To_RGBA_(RemBG).json
tools/: badis2safetensors.py  ben2safetensors.py  check_model.py  check_versions.py  diffdis_repack.py  mvanet2safetensors.py  u2net2safetensors.py
(+133 files in other folders)
