[project]
name = "remove-background"
description = """
Background remove and/or replacement.
Can be applied to images and videos.
Low dependencies, not heavy packages needed.
Supports a lot of models including the populars:
BiRefNet, BEN1/2 (MVANet), InSPyReNet
Some older models:
U-2-Net and IS-Net
And some modern approaches:
PDFNet, MODNet and DiffDIS.
Also supports the models trained by BRIA.
Support for Approximate Fast Foreground Colour Estimation
for smooth background replacement.
"""
# This is the modern Python mechanism, but not supported
# dynamic = ["version"]
# license = "GPL-3.0-or-later"
# Only this is supported :-(
version = "1.0.0"
license = { file = "LICENSE" }
# The following is just ignored
dependencies = ["seconohe"]

[project.urls]
Repository = "https://github.com/set-soft/ComfyUI-RemoveBackground_SET"

[tool.comfy]
PublisherId = "set-soft"
DisplayName = "Remove Background (SET)"
Icon = "https://raw.githubusercontent.com/set-soft/ComfyUI-RemoveBackground_SET/main/doc/LogoRemBG.jpg"
Banner = "https://raw.githubusercontent.com/set-soft/ComfyUI-RemoveBackground_SET/main/doc/Banner.jpg"
# comfy_api.latest for v3 API was introduced here:
requires-comfyui = ">=0.3.48"

[tool.setuptools.dynamic]
version = {attr = "nodes.__version__"}
